@@ -21,6 +21,7 @@ import gtk
 
 class NavigationBar(gtk.HBox):
     """A navigation bar using button (like nautilus)"""
+
     def __init__(self, group=None):
         super(NavigationBar, self).__init__()
         self.id_to_widget = {}
@@ -61,7 +62,10 @@ class NavigationBar(gtk.HBox):
             return
         self.remove(self.id_to_widget[id])
         del self.id_to_widget[id]
-        del self.id_to_callback[id]
+        try:
+            del self.id_to_callback[id]
+        except KeyError:
+            pass
 
     def remove_all(self):
         """remove all elements"""
@@ -77,3 +81,5 @@ class NavigationBar(gtk.HBox):
         if not id in self.id_to_widget:
             return
         return self.id_to_widget[id].get_label()
+
+    
